Fix for alignment

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,7 +10,6 @@ $active-color: #666
 body
 	display: flex
 	flex-direction: column
-	align-items: center
 
 .submit-border:active, .submit-border:focus, .submit-border:focus-within, .chips.submit-border:focus, .chips.submit-border:active, .chips.submit-border:focus-within
 	border-bottom: 1px solid $main-color !important
